--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ dependencies {
 	// Polymer
 	modImplementation include("eu.pb4:polymer-core:${project.polymer_version}")
 	modImplementation include("eu.pb4:polymer-resource-pack:${project.polymer_version}")
+    modImplementation compileOnly("eu.pb4:polymer-autohost:${project.polymer_version}")
 
 	// Server-Translations
 	modImplementation include("xyz.nucleoid:server-translations-api:${project.server_translations_version}")
