--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.6
-yarn_mappings=1.21.6+build.1
-loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.3
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
@@ -15,13 +15,13 @@ maven_group=lol.sylvie.navigation
 archives_base_name=navigation-compasses
 
 # Dependencies
-fabric_version=0.128.0+1.21.6
+fabric_version=0.136.0+1.21.10
 
 # Find updates at https://maven.nucleoid.xyz/eu/pb4/polymer-core/
-polymer_version=0.13.2+1.21.6
+polymer_version=0.14.3+1.21.10
 
 # Find updates at https://maven.nucleoid.xyz/xyz/nucleoid/server-translations-api/
-server_translations_version=2.5.1+1.21.5
+server_translations_version=2.5.2+1.21.9-pre3
 
 # Find updates at https://geysermc.org/wiki/geyser/getting-started-with-the-api
 floodgate_version=2.2.4-SNAPSHOT
