--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,9 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.10
-yarn_mappings=1.21.10+build.2
-loader_version=0.17.3
-loom_version=1.11-SNAPSHOT
+minecraft_version=1.21.11
+loader_version=0.18.2
+loom_version=1.14-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
@@ -15,10 +14,10 @@ maven_group=lol.sylvie.navigation
 archives_base_name=navigation-compasses
 
 # Dependencies
-fabric_version=0.136.0+1.21.10
+fabric_version=0.139.5+1.21.11
 
 # Find updates at https://maven.nucleoid.xyz/eu/pb4/polymer-core/
-polymer_version=0.14.3+1.21.10
+polymer_version=0.15.0-beta.4+1.21.11-rc2
 
 # Find updates at https://maven.nucleoid.xyz/xyz/nucleoid/server-translations-api/
 server_translations_version=2.5.2+1.21.9-pre3
